--- a/index.html
+++ b/index.html
@@ -25,22 +25,29 @@
 
   <main>
     <!-- Intro section, text in left container, image on right, anchor for internal links -->
-    <section class="flex" id="intro">
+    <article class="flex" id="intro">
       <div class="left-container">
         <h2>Hello! I'm Jon</h2>
         <p>I am a software developer originally from England, now living in
         the Dallas, TX area.</p>
         <p>As a former educator and instructional designer, I love to create sites
         that are as informative as they are aesthetically pleasing.</p>
+        <p>If I'm not working on code, you'll typically find me: </p>
+        <ul>
+          <li>solving puzzles, </li>
+          <li>learning a new craft such as crocheting,</li>
+          <li>or fostering kittens for my local
+          animal shelter.</li>
+        </ul>
       </div>
-      <div class="right-container">
+      <div class="right-container" style="padding-top: 100px;">
         <img src="images/me-in-ny.jpg" class="image-circle" alt="Jon in New York City">
       </div>
-    </section>
+    </article>
 
     <hr>
     <!-- About section, image on left, text on right, anchor for internal links -->
-    <section class="flex" id="about">
+    <article class="flex" id="about">
       <div class="left-img">
         <img src="images/tanq.jpg" class="image-rounded" alt="Former foster kitten 'Tanq' sitting on some of my crochet work">
       </div>
@@ -58,32 +65,29 @@
           As a student at <a href="http://www.thinkful.com" target="_blank">Thinkful</a>
           I am enjoying my return to the world of coding. Better late than never, right?
         </p>
-        <p>If I'm not working on code, you'll typically find me solving puzzles, 
-          learning a new craft such as crocheting, or fostering kittens for my local
-          animal shelter.</p>
         <p>If you are looking to hire a new developer who is eager to learn and solve
           problems, <a href="#contact">please get in touch</a>!</p>
       </div>
-    </section>
+    </article>
 
     <hr>
     <!-- Contact section, title on left, text on right. External links open in new tab, anchor for internal links -->
-    <section class="flex" id="contact">
+    <article class="flex" id="contact">
       <div class="left-container">
         <!-- Force h2 to left side, so that it lines up with containers above -->
         <h2 style="text-align: left;">Contact Me</h2>
       </div>
       <div class="right-container">
       <p>If you'd like to get in touch or follow me, you can find me at:</p>
-      <ul>
+      <ol>
         <li><a href="https://github.com/JonBeardDev" target="_blank">GitHub</a></li>
         <li><a href="https://www.linkedin.com/in/jonathan-beard-892750b/" target="_blank">LinkedIn</a>
         </li>
         <li><a href="mailto:jon.beard@gmail.com" target="_blank">Email</a></li>
-      </ul>
+      </ol>
       <p>I look forward to hearing from you!</p>
       </div>
-    </section>
+    </article>
   </main>
 
   <!-- Footer with copyright -->
